# pylatin-translator

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
scripts/: build_release.py
universal_translator/: __init__.py  __main__.py  phrases.py  translator.py
