[build-system]
requires = ["flit_core>=3.12,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pylatin-translator"
version = "0.1.0"
description = "A lightweight NLLB-powered translator with a strong default path for Latin to English."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "matth" }
]
keywords = ["translation", "nllb", "latin", "nlp", "transformers"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: Text Processing :: Linguistic",
]
dependencies = [
  "pycountry>=26.2.16",
  "rich>=13.9.0",
  "sacremoses>=0.1.1",
  "sentencepiece>=0.2.0",
  "torch>=2.0.0",
  "transformers>=4.41.0",
]

[project.optional-dependencies]
dev = [
  "flit>=3.12.0",
]
release = [
  "flit>=3.12.0",
  "pyinstaller>=6.10.0",
]

[project.urls]
Repository = "https://github.com/theworker02/pylatin-translator"
Issues = "https://github.com/theworker02/pylatin-translator/issues"

[project.scripts]
universal-translator = "universal_translator.translator:main"

[tool.flit.module]
name = "universal_translator"
